tests/errors/sem.invalid-type.dot-access.or
main :: () -> void {
    5.name;
};
